# terminal-tarot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/development/: CONTEXT.md  DEVELOPMENT_GUIDE.md  PROJECT_SUMMARY.md  TODO.md
docs/optimization/: CARD_OPTIMIZATION_PLAN.md  CODE_OPTIMIZATION.md  OPTIMIZATION.md  OPTIMIZATION_PHASE2.md  OPTIMIZATION_PHASE3.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PROGRESS.md  PHASE2_EXPLAIN.md  PHASE4_EXPLAIN.md
docs/testing/: TEST_PLAN.md  TEST_REPORT.md
tarot/: __init__.py  __main__.py  ai_reader.py  animations.py  app.py  colors.py  deck.py  history_ui.py  interfaces.py  log.py  renderer.py  spreads.py  spreads_ui.py  style.py  tui.py  utils.py
tarot/cards/: __init__.py  fool.py  major_arcana_part1.py  major_arcana_part2.py  minor_arcana.py  palette.py
tests/: conftest.py  test_business.py  test_deck.py  test_edge_cases.py  test_integration.py  test_log.py  test_spreads.py  test_spreads_ui.py  test_style.py  test_ui.py
