[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
py-modules = ["main"]

[project]
name = "terminal-tarot"
version = "0.7.4"
description = "终端像素塔罗牌占卜 — Pixel art tarot readings in your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tarot = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
