[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
py-modules = ["main"]

[project]
name = "terminal-tarot"
version = "0.7.5"
description = "终端像素塔罗牌占卜 — Pixel art tarot readings in your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SaltedFish-ZZJ", email = "zhuzijian02@example.com"}
]
keywords = ["tarot", "terminal", "pixel-art", "cli", "fortune-telling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Fortune Cookies",
    "Topic :: Artistic Software",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/SaltedFish-ZZJ/terminal-tarot"
Repository = "https://github.com/SaltedFish-ZZJ/terminal-tarot"
Issues = "https://github.com/SaltedFish-ZZJ/terminal-tarot/issues"

[project.scripts]
tarot = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
